Fixed double scroll bar on Recordings page

--- a/WebApp/lol-match-tracker/src/Components/Recording/Recording.css
+++ b/WebApp/lol-match-tracker/src/Components/Recording/Recording.css
@@ -1,6 +1,5 @@
 .pane{
 	color:white;
-	overflow-y:scroll;
 }
 
 .recordings-container{
